# univr-info-workshop

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  misra.json  misra.txt  sdkconfig.develop  sdkconfig.develop.old
.github/workflows/: ci.yaml  publish.yaml
cmake/: common.cmake
emulator/: CMakeLists.txt  main.c
examples/main_blink/: CMakeLists.txt  blink_example_main.c
integration-test/: pytest_hello_world.py
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/src/adapter/: btn.h  led.h  logging.h  queue.h  semaphore.h  task.h  wifi.h
main/src/adapter/esp32/: btn.c  led.c  queue.c  semaphore.c  task.c  wifi.c
main/src/adapter/posix/: btn.c  led.c  queue.c  semaphore.c  task.c  wifi.c
main/src/console/: cmd_system.c  console.c  console.h  net_console.c
main/src/core/: build_config.h  defines.h  error.h  service.c  service.h  service_core.c  service_core.h
main/src/hmi/: hmi.c  hmi.h
scripts/ci/: actions_utils.py  bump_version.py  git_utils.py  unzip_private.py
test/: CMakeLists.txt  test_led.c
