message("Building for ESP32")

file(GLOB ESP32_ADAPTER_SOURCES "${CMAKE_CURRENT_LIST_DIR}/src/adapter/esp32/*.c")
file(GLOB_RECURSE PROJECT_SOURCES "${CMAKE_CURRENT_LIST_DIR}/src/*.c")
list(FILTER PROJECT_SOURCES EXCLUDE REGEX "adapter/")

set(PROJECT_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/src/")

list(APPEND SOURCES 
    ${ESP32_ADAPTER_SOURCES} 
    ${PROJECT_SOURCES}
    "main.c"
)

list(APPEND INCLUDE_DIRS 
    ${PROJECT_INCLUDE_DIRS}
)

idf_component_register(SRCS ${SOURCES} INCLUDE_DIRS ${INCLUDE_DIRS} REQUIRES nvs_flash esp_wifi lwip driver led_strip)

message("Configuring component target: ${COMPONENT_TARGET}")
target_compile_definitions(${COMPONENT_TARGET} PRIVATE
    DEVICE=1
    VERSION_MAJOR=${CFG_FW_VERSION_MAJOR}
    VERSION_MINOR=${CFG_FW_VERSION_MINOR}
    VERSION_PATCH=${CFG_FW_VERSION_PATCH}
    VERSION="${CFG_FW_VERSION}"
)
